<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context=".feature.pendahuluan.PendahuluanActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/colorPrimary"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageView
            android:id="@+id/image_app_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_launcher_foreground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_app_logo" />

        <TextView
            android:id="@+id/text_app_title"
            android:layout_marginTop="@dimen/margin_vertical_small"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/app_name"
            app:layout_constraintTop_toBottomOf="@id/image_app_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginEnd="@dimen/margin_horizontal"
            android:textStyle="bold|italic"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/app_slogan"
            android:textColor="@color/primary_text"
            android:layout_marginTop="@dimen/margin_vertical"
            app:layout_constraintTop_toBottomOf="@id/text_app_title"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_marginTop="@dimen/margin_vertical"
        android:layout_marginStart="@dimen/margin_horizontal"
        android:layout_marginEnd="@dimen/margin_horizontal"
        android:textColor="@color/primary_text"
        android:text="@string/app_description"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="@dimen/margin_vertical"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:text="@string/text_pengembang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginBottom="@dimen/margin_vertical"
        android:gravity="center"
        android:text="@string/app_developer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>