<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".feature.kuis.detail.KuisActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/ab_kuis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/toolbar_kuis" />
    </com.google.android.material.appbar.AppBarLayout>

    <ViewFlipper
        android:id="@+id/view_flipper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="4dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/kuis_relative_layout_min_height"
                        android:padding="@dimen/all_padding">

                        <ImageView
                            android:id="@+id/image_question_2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:adjustViewBounds="false"
                            android:contentDescription="@string/image_kuis" />

                        <TextView
                            android:id="@+id/text_number_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/image_question_2"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@color/primary_text"
                            android:textStyle="bold"
                            tools:text="1." />

                        <TextView
                            android:id="@+id/text_question_2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/image_question_2"
                            android:layout_marginStart="@dimen/margin_horizontal"
                            android:layout_marginBottom="@dimen/margin_vertical"
                            android:layout_toEndOf="@id/text_number_2"
                            android:maxHeight="360dp"
                            android:textColor="@color/primary_text"
                            tools:text="@tools:sample/lorem/random" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <RadioGroup
                    android:id="@+id/answer_group_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_horizontal"
                    android:layout_marginTop="@dimen/margin_vertical"
                    android:orientation="vertical"
                    android:padding="@dimen/all_padding">

                    <RadioButton
                        android:id="@+id/answer_a_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/radio_start_padding"
                        android:paddingEnd="@dimen/radio_end_padding"
                        tools:text="@tools:sample/lorem" />

                    <RadioButton
                        android:id="@+id/answer_b_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/radio_start_padding"
                        android:paddingEnd="@dimen/radio_end_padding"
                        tools:text="@tools:sample/lorem" />

                    <RadioButton
                        android:id="@+id/answer_c_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/radio_start_padding"
                        android:paddingEnd="@dimen/radio_end_padding"
                        tools:text="@tools:sample/lorem" />

                    <RadioButton
                        android:id="@+id/answer_d_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/radio_start_padding"
                        android:paddingEnd="@dimen/radio_end_padding"
                        tools:text="@tools:sample/lorem" />
                </RadioGroup>
            </LinearLayout>
        </ScrollView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="4dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/kuis_relative_layout_min_height"
                        android:padding="@dimen/all_padding">

                        <ImageView
                            android:id="@+id/image_question_1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:adjustViewBounds="false"
                            android:contentDescription="@string/image_question" />

                        <TextView
                            android:id="@+id/text_number_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/image_question_1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@color/primary_text"
                            android:textStyle="bold"
                            tools:text="1." />

                        <TextView
                            android:id="@+id/text_question_1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/image_question_1"
                            android:layout_marginStart="8dp"
                            android:layout_marginBottom="8dp"
                            android:layout_toEndOf="@id/text_number_1"
                            android:textColor="@color/primary_text"
                            tools:text="@tools:sample/lorem/random" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <RadioGroup
                    android:id="@+id/answer_group_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <RadioButton
                        android:id="@+id/answer_a_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="0dp"
                        tools:text="@tools:sample/lorem" />

                    <RadioButton
                        android:id="@+id/answer_b_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="0dp"
                        tools:text="@tools:sample/lorem" />

                    <RadioButton
                        android:id="@+id/answer_c_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="0dp"
                        tools:text="@tools:sample/lorem" />

                    <RadioButton
                        android:id="@+id/answer_d_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="0dp"
                        tools:text="@tools:sample/lorem" />
                </RadioGroup>
            </LinearLayout>
        </ScrollView>

    </ViewFlipper>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:padding="@dimen/all_padding">

        <Button
            android:id="@+id/button_prev"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_horizontal"
            android:background="@color/colorTriadic"
            android:drawableStart="@drawable/ic_chevron_left_white_24dp"
            android:text="@string/action_prev" />

        <Button
            android:id="@+id/button_next"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorTriadic"
            android:drawableEnd="@drawable/ic_chevron_right_white_24dp"
            android:text="@string/action_next" />
    </LinearLayout>
</LinearLayout>